--- a/templates/blog-post-template.html
+++ b/templates/blog-post-template.html
@@ -231,11 +231,7 @@
                 <!-- Inset image -->
                 <div class="inset-image-row">
                   <fig>
-                    <img
-                      src="/assets/img/works/work1.jpg"
-                      alt="Inset Caption"
-                      class="inset-img"
-                    />
+                    <img src="#" alt="Inset Caption" class="inset-img" />
                     <figcaption>This is a caption.</figcaption>
                   </fig>
 
@@ -287,43 +283,21 @@
                 <h2>End Result</h2>
                 <p>
                   Deployed static site on Netlify;
-                  <a href="/link-to-live-project">Live demo</a> available.
+                  <a href="#">Live demo</a> available.
                 </p>
 
-                <!-- Media tile for project link -->
-                <a class="media-tile" href="#" target="_blank">
-                  <img
-                    src="/assets/images/128px-Figma-logo.png"
-                    alt="View Figma Project"
-                    class="media-thumb"
-                  />
-                  <div class="media-label">View Figma Prototype</div>
-                </a>
-
                 <!-- Media tile for Pinterest link -->
-                <a class="media-tile" href="#" target="_blank">
-                  <img
-                    src="/assets/images/128px-Pinterest-logo.png"
-                    alt="View Pinterest Board"
-                    class="media-thumb pinterest-thumb"
-                  />
-                  <div class="media-label">View Pinterest Board</div>
-                </a>
-
-                <!-- Media tile for video link -->
                 <a
-                  class="media-tile has-popup-video"
-                  href="https://youtu.be/S4L8T2kFFck"
+                  class="media-tile"
+                  href="#"
                   target="_blank"
-                  aria-label="Watch YouTube Video"
+                  aria-label="View Pinterest Board"
                 >
                   <div
-                    class="media-thumb youtube-thumb"
-                    style="
-                      background-image: url('https://img.youtube.com/vi/S4L8T2kFFck/hqdefault.jpg');
-                    "
+                    class="media-thumb pinterest-thumb"
+                    style="background-image: url('#')"
                   ></div>
-                  <div class="media-label">Watch Video</div>
+                  <div class="media-label">View Pinterest Board</div>
                 </a>
 
                 <!-- Instagram Story -->
@@ -335,25 +309,28 @@
                 >
                   <div
                     class="media-thumb ig-story-thumb"
-                    style="
-                      background-image: url('/assets/img/works/motion/pxl-esports-logoanimation.webm');
-                    "
+                    style="background-image: url('#')"
                   ></div>
                   <div class="media-label">View IG Highlight</div>
                 </a>
+              </section>
+
+              <section class="demo">
+                <h2>Demo Showcase</h2>
+                <!-- iframes embeds -->
+                <div class="iframe-container">
+                  <!-- FIGMA iframe -->
+                  <div></div>
+
+                  <!-- VIMEO iframe -->
+                </div>
 
                 <!-- PDF viewer -->
                 <div class="pdf-viewer-container">
-                  <iframe
-                    src="/assets/pdfs/Esports_Brandbook_Final.pdf"
-                    width="100%"
-                    height="700"
-                  >
+                  <iframe src="#" width="100%" height="700">
                     <p>
                       Your browser doesn't support embedded PDFs.
-                      <a href="/assets/pdfs/Esports_Brandbook_Final.pdf"
-                        >Download the PDF</a
-                      >.
+                      <a href="#">Download the PDF</a>.
                     </p>
                   </iframe>
                 </div>
@@ -424,21 +401,7 @@
                   </a>
                 </div>
 
-                <div class="cat-links">
-                  <span>Posted in</span>
-
-                  <a href="/categories/general">general</a>
-                </div>
-
-                <div class="byline">
-                  by <span class="author">Heleen Evers</span>
-                </div>
-
-                <div class="tags-links">
-                  <span>Tags:</span>
-
-                  <a href="/tags/introduction" rel="tag">introduction</a>
-                </div>
+                <div class="post-meta"></div>
               </div>
 
               <div id="post-navigation-placeholder"></div>
