Add metadata generation to nav build script for blog pages + rebuild

--- a/templates/blog-post-template.html
+++ b/templates/blog-post-template.html
@@ -463,12 +463,9 @@
       class="popup-gallery-source"
       style="display: none"
     >
-      <a href="/assets/img/works/work1.jpg" title="First shot description"></a>
-      <!-- work1-full.jpg -->
-      <a href="/assets/img/works/work2.jpg" title="Second shot description"></a>
-      <!-- work2-full.jpg -->
-      <a href="/assets/img/works/work3.jpg" title="Third shot description"></a>
-      <!-- work3-full.jpg -->
+      <a href="#" title="First shot description"></a>
+      <a href="#" title="Second shot description"></a>
+      <a href="#" title="Third shot description"></a>
     </div>
 
     <!-- Load Components -->
