--- a/assets/css/popups.css
+++ b/assets/css/popups.css
@@ -14,6 +14,7 @@
 /* Inner popup content box */
 #popup-content {
   width: 100%;
+  max-width: var(--container-max-width);
   margin: 0 auto;
   position: relative;
   background: transparent;
