--- a/components/footer.html
+++ b/components/footer.html
@@ -1,7 +1,8 @@
 <footer>
   <div class="footer-copy">
     © 2025 Heleen Evers. All rights reserved. |
-    <a href="privacy.html">Privacy Notice</a>
+    <a href="privacy.html">Privacy Notice</a> -
+    <a href="attributions.html">Attributions</a>
   </div>
   <div class="footer-social">
     <a
